force-app/main/default/objects/Integration_Log_Setting__mdt/Integration_Log_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Integration Log Setting</label>
    <pluralLabel>Integration Log Settings</pluralLabel>
</CustomObject>