force-app/main/default/objects/Integration_Log_Setting__mdt/fields/Expiration_Days__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Days__c</fullName>
    <label>Expiration Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>