force-app/main/default/objects/Integration_Log_Setting__mdt/fields/Expires__c.field-meta.xml
<CustomField>
    <fullName>Expires__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expires</label>
    <type>Checkbox</type>
</CustomField>