force-app/main/default/objects/Integration_Log_Setting__mdt/fields/Log_Success__c.field-meta.xml
<CustomField>
    <fullName>Log_Success__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Log Success</label>
    <type>Checkbox</type>
</CustomField>