force-app/main/default/objects/Integration_Log_Setting__mdt/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verifiable</fullName>
                <default>true</default>
                <label>Verifiable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>